[package]
name = "thyme"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chia = "0.11.0"
chia-wallet-sdk = "0.12.0"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
clvmr = "0.8.0"
csv = "1.3.0"
hex = "0.4.3"
hex-literal = "0.4.1"
indexmap = { version = "2.4.0", features = ["serde"] }
rayon = "1.10.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_with = { version = "3.9.0", features = ["hex", "indexmap_2"] }
tokio = { version = "1.39.3", features = ["full"] }
toml = "0.8.19"
